--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "vue": "^3.4.15",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.2.5"
     }
 }
