--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^5.0.3",
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.4",
@@ -15,6 +16,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.4.15",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.2.5"
