--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.4.15",
         "vue-loader": "^17.4.2",
-        "vue-multiselect": "^3.0.0-beta.3",
-        "vue-router": "^4.2.5"
+        "vue-multiselect": "^3.0.0-beta.3"
     }
 }
