--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.4.15",
         "vue-loader": "^17.4.2",
-        "vue-multiselect": "^3.0.0-beta.3"
+        "vue-multiselect": "^3.0.0-beta.3",
+        "ziggy-js": "^1.8.1"
     }
 }
