--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "form-backend-validation": "^2.4.0",
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.4.15",
         "vue-loader": "^17.4.2",
